trying to fix z-index

--- a/src/views/MenuList.css
+++ b/src/views/MenuList.css
@@ -24,7 +24,7 @@
   background-repeat: no-repeat;
   background-color: rgb(0, 0, 0);
   background-position: center;
-  box-shadow: 0 0 16px rgba(0, 0, 0, 0.12);
+  /* box-shadow: 0 0 16px rgba(0, 0, 0, 0.12); */
   width: 60px;
   height: 60px;
   border-radius: 50%;
@@ -53,7 +53,7 @@
   position: absolute;
   top: 10px;
   left: 335px;
-  z-index: 2;
+  z-index: 4;
   background-color: #e5674e;
   display: flex;
   justify-content: center;
